lex/PPCDSALVCParser.py
# Generated from PPCDSALVC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


import pprint
import sys



class PPCDSALVCParser ( Parser ):

    grammarFileName = "PPCDSALVC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'main'", "'func'", "'return'", 
                     "'void'", "'var'", "'class'", "'public'", "'private'", 
                     "'while'", "'for'", "'print'", "'input'", "'<'", "'>'", 
                     "'!='", "'<='", "'>='", "'=='", "'&&'", "'||'", "'if'", 
                     "'elseif'", "'else'", "'!'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "<INVALID>", "'='", "':'", "'['", "']'", "'('", "')'", 
                     "'{'", "'}'", "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TYPES", "INT", "FLOAT", 
                      "CHAR", "MAS", "MENOS", "MULT", "DIV", "CMP", "IGUAL", 
                      "PP", "LB", "RB", "PA", "PC", "LLA", "LLC", "PUNTO", 
                      "COMA", "PUNTOCOMA", "ID", "IGN" ]

    RULE_programa = 0
    RULE_main = 1
    RULE_functions = 2
    RULE_functionbloque = 3
    RULE_stmt = 4
    RULE_returntypes = 5
    RULE_params = 6
    RULE_paramfirst = 7
    RULE_parameters = 8
    RULE_variables = 9
    RULE_typesvar = 10
    RULE_typesvaraux = 11
    RULE_secondType = 12
    RULE_classes = 13
    RULE_pu = 14
    RULE_pv = 15
    RULE_classdef = 16
    RULE_assignment = 17
    RULE_loop = 18
    RULE_foraux = 19
    RULE_method = 20
    RULE_funccall = 21
    RULE_multipleexp = 22
    RULE_imprimir = 23
    RULE_entrada = 24
    RULE_entradaaux = 25
    RULE_arreglo = 26
    RULE_attr = 27
    RULE_relationalop = 28
    RULE_logicop = 29
    RULE_condition = 30
    RULE_elseif = 31
    RULE_elseotr = 32
    RULE_hyperexp = 33
    RULE_hyperexpaux = 34
    RULE_superexp = 35
    RULE_superexpaux = 36
    RULE_exp = 37
    RULE_expaux = 38
    RULE_binbasico = 39
    RULE_term = 40
    RULE_termaux = 41
    RULE_bincomplejo = 42
    RULE_signosunarios = 43
    RULE_factor = 44
    RULE_factorclases = 45
    RULE_metodoaux = 46
    RULE_cte = 47
    RULE_parent = 48

    ruleNames =  [ "programa", "main", "functions", "functionbloque", "stmt", 
                   "returntypes", "params", "paramfirst", "parameters", 
                   "variables", "typesvar", "typesvaraux", "secondType", 
                   "classes", "pu", "pv", "classdef", "assignment", "loop", 
                   "foraux", "method", "funccall", "multipleexp", "imprimir", 
                   "entrada", "entradaaux", "arreglo", "attr", "relationalop", 
                   "logicop", "condition", "elseif", "elseotr", "hyperexp", 
                   "hyperexpaux", "superexp", "superexpaux", "exp", "expaux", 
                   "binbasico", "term", "termaux", "bincomplejo", "signosunarios", 
                   "factor", "factorclases", "metodoaux", "cte", "parent" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    TYPES=26
    INT=27
    FLOAT=28
    CHAR=29
    MAS=30
    MENOS=31
    MULT=32
    DIV=33
    CMP=34
    IGUAL=35
    PP=36
    LB=37
    RB=38
    PA=39
    PC=40
    LLA=41
    LLC=42
    PUNTO=43
    COMA=44
    PUNTOCOMA=45
    ID=46
    IGN=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PPCDSALVCParser.ID, 0)

        def PUNTOCOMA(self):
            return self.getToken(PPCDSALVCParser.PUNTOCOMA, 0)

        def main(self):
            return self.getTypedRuleContext(PPCDSALVCParser.MainContext,0)


        def variables(self):
            return self.getTypedRuleContext(PPCDSALVCParser.VariablesContext,0)


        def classes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPCDSALVCParser.ClassesContext)
            else:
                return self.getTypedRuleContext(PPCDSALVCParser.ClassesContext,i)


        def functions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPCDSALVCParser.FunctionsContext)
            else:
                return self.getTypedRuleContext(PPCDSALVCParser.FunctionsContext,i)


        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = PPCDSALVCParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(PPCDSALVCParser.T__0)
            self.state = 99
            self.match(PPCDSALVCParser.ID)
            self.state = 100
            self.match(PPCDSALVCParser.PUNTOCOMA)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PPCDSALVCParser.T__5:
                self.state = 101
                self.variables()


            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PPCDSALVCParser.T__6:
                self.state = 104
                self.classes()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PPCDSALVCParser.T__2:
                self.state = 110
                self.functions()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLA(self):
            return self.getToken(PPCDSALVCParser.LLA, 0)

        def LLC(self):
            return self.getToken(PPCDSALVCParser.LLC, 0)

        def variables(self):
            return self.getTypedRuleContext(PPCDSALVCParser.VariablesContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPCDSALVCParser.StmtContext)
            else:
                return self.getTypedRuleContext(PPCDSALVCParser.StmtContext,i)


        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = PPCDSALVCParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(PPCDSALVCParser.T__1)
            self.state = 119
            self.match(PPCDSALVCParser.LLA)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PPCDSALVCParser.T__5:
                self.state = 120
                self.variables()


            self.state = 124 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 123
                self.stmt()
                self.state = 126 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PPCDSALVCParser.T__9) | (1 << PPCDSALVCParser.T__10) | (1 << PPCDSALVCParser.T__11) | (1 << PPCDSALVCParser.T__12) | (1 << PPCDSALVCParser.T__21) | (1 << PPCDSALVCParser.ID))) != 0)):
                    break

            self.state = 128
            self.match(PPCDSALVCParser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returntypes(self):
            return self.getTypedRuleContext(PPCDSALVCParser.ReturntypesContext,0)


        def ID(self):
            return self.getToken(PPCDSALVCParser.ID, 0)

        def PA(self):
            return self.getToken(PPCDSALVCParser.PA, 0)

        def PC(self):
            return self.getToken(PPCDSALVCParser.PC, 0)

        def LLA(self):
            return self.getToken(PPCDSALVCParser.LLA, 0)

        def functionbloque(self):
            return self.getTypedRuleContext(PPCDSALVCParser.FunctionbloqueContext,0)


        def LLC(self):
            return self.getToken(PPCDSALVCParser.LLC, 0)

        def parameters(self):
            return self.getTypedRuleContext(PPCDSALVCParser.ParametersContext,0)


        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_functions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctions" ):
                listener.enterFunctions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctions" ):
                listener.exitFunctions(self)




    def functions(self):

        localctx = PPCDSALVCParser.FunctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(PPCDSALVCParser.T__2)
            self.state = 131
            self.returntypes()
            self.state = 132
            self.match(PPCDSALVCParser.ID)
            self.state = 133
            self.match(PPCDSALVCParser.PA)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PPCDSALVCParser.TYPES or _la==PPCDSALVCParser.ID:
                self.state = 134
                self.parameters()


            self.state = 137
            self.match(PPCDSALVCParser.PC)
            self.state = 138
            self.match(PPCDSALVCParser.LLA)
            self.state = 139
            self.functionbloque()
            self.state = 140
            self.match(PPCDSALVCParser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionbloqueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(PPCDSALVCParser.ExpContext,0)


        def PUNTOCOMA(self):
            return self.getToken(PPCDSALVCParser.PUNTOCOMA, 0)

        def variables(self):
            return self.getTypedRuleContext(PPCDSALVCParser.VariablesContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPCDSALVCParser.StmtContext)
            else:
                return self.getTypedRuleContext(PPCDSALVCParser.StmtContext,i)


        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_functionbloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionbloque" ):
                listener.enterFunctionbloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionbloque" ):
                listener.exitFunctionbloque(self)




    def functionbloque(self):

        localctx = PPCDSALVCParser.FunctionbloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionbloque)
        self._la = 0 # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PPCDSALVCParser.T__5:
                    self.state = 142
                    self.variables()


                self.state = 146 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 145
                    self.stmt()
                    self.state = 148 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PPCDSALVCParser.T__9) | (1 << PPCDSALVCParser.T__10) | (1 << PPCDSALVCParser.T__11) | (1 << PPCDSALVCParser.T__12) | (1 << PPCDSALVCParser.T__21) | (1 << PPCDSALVCParser.ID))) != 0)):
                        break

                self.state = 150
                self.match(PPCDSALVCParser.T__3)
                self.state = 151
                self.exp()
                self.state = 152
                self.match(PPCDSALVCParser.PUNTOCOMA)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PPCDSALVCParser.T__5:
                    self.state = 154
                    self.variables()


                self.state = 158 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 157
                    self.stmt()
                    self.state = 160 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PPCDSALVCParser.T__9) | (1 << PPCDSALVCParser.T__10) | (1 << PPCDSALVCParser.T__11) | (1 << PPCDSALVCParser.T__12) | (1 << PPCDSALVCParser.T__21) | (1 << PPCDSALVCParser.ID))) != 0)):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PPCDSALVCParser.AssignmentContext,0)


        def PUNTOCOMA(self):
            return self.getToken(PPCDSALVCParser.PUNTOCOMA, 0)

        def loop(self):
            return self.getTypedRuleContext(PPCDSALVCParser.LoopContext,0)


        def condition(self):
            return self.getTypedRuleContext(PPCDSALVCParser.ConditionContext,0)


        def imprimir(self):
            return self.getTypedRuleContext(PPCDSALVCParser.ImprimirContext,0)


        def entrada(self):
            return self.getTypedRuleContext(PPCDSALVCParser.EntradaContext,0)


        def funccall(self):
            return self.getTypedRuleContext(PPCDSALVCParser.FunccallContext,0)


        def method(self):
            return self.getTypedRuleContext(PPCDSALVCParser.MethodContext,0)


        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = PPCDSALVCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.assignment()
                self.state = 165
                self.match(PPCDSALVCParser.PUNTOCOMA)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.loop()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.condition()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 169
                self.imprimir()
                self.state = 170
                self.match(PPCDSALVCParser.PUNTOCOMA)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 172
                self.entrada()
                self.state = 173
                self.match(PPCDSALVCParser.PUNTOCOMA)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 175
                self.funccall()
                self.state = 176
                self.match(PPCDSALVCParser.PUNTOCOMA)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 178
                self.method()
                self.state = 179
                self.match(PPCDSALVCParser.PUNTOCOMA)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturntypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPES(self):
            return self.getToken(PPCDSALVCParser.TYPES, 0)

        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_returntypes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturntypes" ):
                listener.enterReturntypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturntypes" ):
                listener.exitReturntypes(self)




    def returntypes(self):

        localctx = PPCDSALVCParser.ReturntypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returntypes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            _la = self._input.LA(1)
            if not(_la==PPCDSALVCParser.T__4 or _la==PPCDSALVCParser.TYPES):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(PPCDSALVCParser.COMA, 0)

        def TYPES(self):
            return self.getToken(PPCDSALVCParser.TYPES, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PPCDSALVCParser.ID)
            else:
                return self.getToken(PPCDSALVCParser.ID, i)

        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = PPCDSALVCParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.match(PPCDSALVCParser.COMA)
                self.state = 186
                self.match(PPCDSALVCParser.TYPES)
                self.state = 187
                self.match(PPCDSALVCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                self.match(PPCDSALVCParser.COMA)
                self.state = 189
                self.match(PPCDSALVCParser.ID)
                self.state = 190
                self.match(PPCDSALVCParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamfirstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPES(self):
            return self.getToken(PPCDSALVCParser.TYPES, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PPCDSALVCParser.ID)
            else:
                return self.getToken(PPCDSALVCParser.ID, i)

        def params(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPCDSALVCParser.ParamsContext)
            else:
                return self.getTypedRuleContext(PPCDSALVCParser.ParamsContext,i)


        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_paramfirst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamfirst" ):
                listener.enterParamfirst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamfirst" ):
                listener.exitParamfirst(self)




    def paramfirst(self):

        localctx = PPCDSALVCParser.ParamfirstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramfirst)
        self._la = 0 # Token type
        try:
            self.state = 209
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PPCDSALVCParser.TYPES]:
                self.enterOuterAlt(localctx, 1)
                self.state = 193
                self.match(PPCDSALVCParser.TYPES)
                self.state = 194
                self.match(PPCDSALVCParser.ID)
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PPCDSALVCParser.COMA:
                    self.state = 195
                    self.params()
                    self.state = 200
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [PPCDSALVCParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.match(PPCDSALVCParser.ID)
                self.state = 202
                self.match(PPCDSALVCParser.ID)
                self.state = 206
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PPCDSALVCParser.COMA:
                    self.state = 203
                    self.params()
                    self.state = 208
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramfirst(self):
            return self.getTypedRuleContext(PPCDSALVCParser.ParamfirstContext,0)


        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = PPCDSALVCParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameters)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.paramfirst()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLA(self):
            return self.getToken(PPCDSALVCParser.LLA, 0)

        def LLC(self):
            return self.getToken(PPCDSALVCParser.LLC, 0)

        def typesvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPCDSALVCParser.TypesvarContext)
            else:
                return self.getTypedRuleContext(PPCDSALVCParser.TypesvarContext,i)


        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)




    def variables(self):

        localctx = PPCDSALVCParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 213
            self.match(PPCDSALVCParser.T__5)
            self.state = 214
            self.match(PPCDSALVCParser.LLA)
            self.state = 216 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 215
                self.typesvar()
                self.state = 218 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PPCDSALVCParser.TYPES or _la==PPCDSALVCParser.ID):
                    break

            self.state = 220
            self.match(PPCDSALVCParser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesvarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PPCDSALVCParser.ID, 0)

        def typesvaraux(self):
            return self.getTypedRuleContext(PPCDSALVCParser.TypesvarauxContext,0)


        def PUNTOCOMA(self):
            return self.getToken(PPCDSALVCParser.PUNTOCOMA, 0)

        def secondType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPCDSALVCParser.SecondTypeContext)
            else:
                return self.getTypedRuleContext(PPCDSALVCParser.SecondTypeContext,i)


        def TYPES(self):
            return self.getToken(PPCDSALVCParser.TYPES, 0)

        def getRuleIndex(self):
            return PPCDSALVCParser.RULE_typesvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypesvar" ):
                listener.enterTypesvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypesvar" ):
                listener.exitTypesvar(self)




    def typesvar(self):

        localctx = PPCDSALVCParser.TypesvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typesvar)
        self._la = 0 # Token type
        try:
            self.state = 242
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PPCDSALVCParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 222
                self.match(PPCDSALVCParser.ID)
                self.state = 223
                self.typesvaraux()
                self.state = 227
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PPCDSALVCParser.COMA:
                    self.state = 224
                    self.secondType()
                    self.state = 229
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 230
                self.match(PPCDSALVCParser.PUNTOCOMA)
                pass
            elif token in [PPCDSALVCParser.TYPES]:
                self.enterOuterAlt(localctx, 2)
                self.state = 232
                self.match(PPCDSALVCParser.TYPES)
                self.state = 233
                self.typesvaraux()
                self.state = 237
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PPCDSALVCParser.COMA:
                    self.state = 234
                    self.secondType()
                    self.state = 239
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 240
                self.match(PPCDSALVCParser.PUNTOCOMA)
                pass
            else:
                raise NoViableAltException(self)
